Users added cities_in
