# app/Http/Controllers/UserController.php
@@ -73,7 +73,7 @@ class UserController extends Controller
 
     public function index(Request $request){    
 
-        $search_fields = ['id','user_id', 'identifier', 'name','phone','email','mad_email','any_email','group_id','group_in','vertical_id','city_id',
+        $search_fields = ['id','user_id', 'identifier', 'name','phone','email','mad_email','any_email','group_id','groups_in','vertical_id','city_id', 'cities_in',
                             'user_type','center_id','project_id', 'not_user_type', 'credit', 'credit_lesser_than', 'credit_greater_than'];
         $search = [];
         foreach ($search_fields as $key) {
@@ -83,8 +83,10 @@ class UserController extends Controller
 
             if ($key == 'group_id') {
                 $search['user_group'] = [$request->input('group_id')];
-            } elseif ($key == 'group_in') {
-                $search['user_group'] = explode(",", $request->input('group_in'));
+            } elseif ($key == 'groups_in') {
+                $search['user_group'] = explode(",", $request->input('groups_in'));
+            } elseif ($key == 'cities_in') {
+                $search['city'] = explode(",", $request->input('cities_in'));
             } elseif ($key == 'not_user_type') {
                 $search['not_user_type'] = explode(",", $request->input('not_user_type'));
             } else {
