# routes/api.php
@@ -587,7 +587,7 @@ Route::group(['prefix' => $url_prefix, 'middleware' => ['auth.basic']], function
 
     ///////////////////////////////////////////////////////// User Calls //////////////////////////////////////////////
     Route::get('/users', function (Request $request) {
-        $search_fields = ['id','user_id', 'identifier', 'name','phone','email','mad_email','any_email','group_id','group_in','vertical_id','city_id',
+        $search_fields = ['id','user_id', 'identifier', 'name','phone','email','mad_email','any_email','group_id','groups_in','vertical_id','city_id','cities_in',
                             'user_type','center_id','project_id', 'not_user_type', 'credit', 'credit_lesser_than', 'credit_greater_than'];
         $search = [];
         foreach ($search_fields as $key) {
@@ -597,8 +597,10 @@ Route::group(['prefix' => $url_prefix, 'middleware' => ['auth.basic']], function
 
             if ($key == 'group_id') {
                 $search['user_group'] = [$request->input('group_id')];
-            } elseif ($key == 'group_in') {
-                $search['user_group'] = explode(",", $request->input('group_in'));
+            } elseif ($key == 'groups_in') {
+                $search['user_group'] = explode(",", $request->input('groups_in'));
+            } elseif ($key == 'cities_in') {
+                $search['city'] = explode(",", $request->input('cities_in'));
             } elseif ($key == 'not_user_type') {
                 $search['not_user_type'] = explode(",", $request->input('not_user_type'));
             } else {
@@ -610,7 +612,7 @@ Route::group(['prefix' => $url_prefix, 'middleware' => ['auth.basic']], function
         }
 
         $user = new User;
-        $data = $user->search($search);
+        $data = $user->search($search);        
 
         return JSend::success("Search Results", ['users' => $data]);
     });
